test/errors/branch-minus.rom
Error in `branch-minus.asm` on line 11: Branch address out of range
